--- a/layouts/shortcodes/recent/page.html
+++ b/layouts/shortcodes/recent/page.html
@@ -8,7 +8,7 @@
     </a>
     <div class="recent-post-date">{{ .Date.Format "January 02, 2006" }}</div>
   </div>
-  <div class="recent-post-description">{{ .Description }}</div>
+  <p class="recent-post-description">{{ .Description | markdownify }}</p>
   {{ if .Params.Thumbnail }}
   <a href="{{.RelPermalink}}">
     <img class="recent-post-thumbnail" src="{{ .Params.Thumbnail }}" />
